--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigt.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigt.cshtml
@@ -6,10 +6,11 @@
     
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="\css/core.css"/>
+        <link rel="stylesheet" href="\css/core.css" />
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
         <title>Velkommen til</title>
-        
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,7 +19,7 @@
 <body>
     <div class="container-fluid h-100">
         <div>
-            <h1 class="col-8 offset-3 headline">Hvad vil du gerne finde?</h1>
+            <h1 class="col-8 offset-3 headline novifont">Hvad vil du gerne finde?</h1>
         </div>
 
         <div class="row">
@@ -32,7 +33,7 @@
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton"/>
             </div>
             <div class="col-8 mb-2 search_box align-self-center mt-2">
-                <input type="text" placeholder="Søg efter virksomheder eller lokaler.." class="søgeknap">
+                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont">
             </div>
         </div>
 
@@ -41,58 +42,58 @@
         </div>
 
         <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href='/faq'">Oversigtskort</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href='/faq'">Oversigtskort</button>
             
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 1</p>
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 1</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 2</p>
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 2</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 3</p>
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 3</p>
             </button>
         </div>
 
         <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href='/privacy'">Parkering</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href='/privacy'">Parkering</button>
 
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 4</p>
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 4</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 5</p>
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 5</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 6</p>
-            </button>
-
-        </div>
-
-        <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href='/faq'">Ofte Stillede Spørgsmål</button>
-
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 7</p>
-            </button>
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 8</p>
-            </button>
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 9</p>
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 6</p>
             </button>
 
         </div>
 
         <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 offset-3 SideboxFirma">
-                <p class="my-auto text-center">Firma 10</p>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href='/faq'">Ofte Stillede Spørgsmål</button>
+
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 7</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 11</p>
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 8</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
-                <p class="my-auto text-center">Firma 12</p>
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 9</p>
+            </button>
+
+        </div>
+
+        <div class="row align-items-center h-100">
+            <button type="button" class="col-2 mb-5 offset-3 companybox">
+                <p class="my-auto text-center novifont">Firma 10</p>
+            </button>
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 11</p>
+            </button>
+            <button type="button" class="col-2 mb-5 offset-1 companybox">
+                <p class="my-auto text-center novifont">Firma 12</p>
             </button>
 
         </div>
