--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigtskort.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigtskort.cshtml
@@ -4,22 +4,23 @@
     ViewData["Title"] = "Oversigtskort";
 }
 
-<head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="\css/core.css"/>
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="\css/core.css" />
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
-    <title>Oversigtskort</title>
+        <title>Oversigtskort</title>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-</head>
+    </head>
 
 <body>
 <!-- This div contains the site-->
     <div class="container-fluid h-100">
         <div>
-            <h1 class="col-8 offset-3 headline">Oversigtskort</h1>
+            <h1 class="col-8 offset-3 headline novifont">Oversigtskort</h1>
         </div>
 
         <!-- This div contains the icons and search field-->
@@ -34,7 +35,7 @@
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton" />
             </div>
             <div class="col-8 mb-2 search_box align-self-center mt-2">
-                <input type="text" placeholder="Søg efter virksomheder eller lokaler.." class="søgeknap">
+                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont">
             </div>
         </div>
 
@@ -42,7 +43,7 @@
         <div class="row">
             <hr class="col-11 mb-4 orangeline" />
         </div>
-        <img src="Pictures/novi.png" width="80%" height="50%">
+        <img class="map" src="Pictures/novi.png" >
     </div>
 </body>
 
