--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
@@ -28,7 +28,7 @@ body {
     height: 95px;
 }
 
-.SideboxFirma {
+.companybox {
     background-color: grey;
     color: white;
     display: block;
@@ -134,40 +134,42 @@ button:hover {
 .faqquestions {
     margin-top: 1%;
     margin-left: 3%;
-    font-size: 17px;
+    font-size: 120%;
 }
 
 .faqsvar {
     margin-left: 5%
 }
 
-.Parkering_skrift {
+.parkingfont {
     font-size: 17px;
     text-align: center;
     margin-top: 7%
 }
 
-.Parkerings_input {
+.parkinginput {
     width: 80%;
     text-align: center;
     border-style: solid;
-    border-radius: 10px;
+    border-radius: 5%;
     border-color: #8d9092;
     background-color: #8d9092;
-    height: 50px;
     color: white;
     margin-left: 33%;
+    padding: 1% 1% 1% 1%;
 }
 
-.parkerings_knap {
+.parkingbutton {
     box-shadow: 7px 7px 5px grey;
     background-color: #f3bb1b;
-    border-radius: 20px;
-    width: 20vh;
-    display: block;
-    height: 8vh;
+    border-radius: 30%;
+    width: 18%;
+    height: 35%;
     color: white;
+    margin-left: 39%;
+    margin-top: -10%;
     }
+
 .Oversigtskort {
     width: 80%;
     height: 50%
@@ -199,18 +201,17 @@ button:hover {
     margin-top: 10vh;
 }
 
-.personboxnavn {
-    display: block;
-    height: 100%;
-    border-color: orange;
-}
-
-.findpersonbox {
+.findsomethingbox {
     border-color: orange;
     display: block;
     border-style: solid;
     margin-top: -150px;
-    font-size: 130%;
+    font-size: 120%;
+}
+
+.findsomethingboxheader {
+    font-weight: bold;
+    font-size: 140%;
 }
 
 .normaltext {
@@ -224,6 +225,21 @@ button:hover {
 }
 
 .logo1 {
-    margin-top: 30px;
-    padding-left: 150px;
+    margin-top: 8%;
+    padding-left: 40%;
+    width: 80%;
+    height: 35%;
+}
+
+.logo2 {
+    display: block;
+    height: 100%;
+    border-color: orange;
+    width: 15%;
+    margin-top: 5%;
+}
+
+.map {
+    margin-top: 15%;
+    margin-left: 38%;
 }
