--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Index.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Index.cshtml
@@ -12,16 +12,17 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container logo3" >
         <div class="row float-left">
-            <div class="col novi" style="margin-top: 30%; margin-left: -5%">
+            <div class="col novi" style="">
                 <img src="\Pictures/novi.png" />
             </div>
         </div>
 
+    <div class="indextext">
         <div class="row">
             <div class="col">
-                <p class="headline novifont" style="margin-top: 40%; text-align: center">
+                <p class="headline novifont" style=" text-align: center">
                     Velkommen til Novi 8
                 </p>
             </div>
@@ -35,11 +36,12 @@
             </div>
         </div>
 
-        <div class="row align-items-center">
-            <button type="button" class="col-4 offset-4 startknap novifont"
+        <div class=" align-items-center">
+            <button type="button" class="col-4 offset-4 startbutton novifont noviyellow"
                     onclick="window.location.href='/personinfo'">
                 Tryk her
             </button>
         </div>
     </div>
+        </div>
 </body>
