--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigtskort.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigtskort.cshtml
@@ -34,7 +34,7 @@
             <div class="col-1 align-self-center center">
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton" />
             </div>
-            <div class="col-8 mb-2 search_box align-self-center mt-2">
+            <div class="col-8 mb-2 align-self-center mt-2">
                 <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont">
             </div>
         </div>
