--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Personinfo.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Personinfo.cshtml
@@ -33,7 +33,7 @@
             <div class="col-1 align-self-center center">
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton" />
             </div>
-            <div class="col-8 mb-2 search_box align-self-center mt-2">
+            <div class="col-8 mb-2 align-self-center mt-2">
                 <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont">
             </div>
         </div>
@@ -45,7 +45,7 @@
 
         <!-- This div contains the buttons on left hand side-->
         <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">Oversigtskort</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Oversigtskort</button>
 
             <div class="col-5 offset-1 novifont">
                 <p class="normaltext">
@@ -59,11 +59,11 @@
             </div>
         </div>
         <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">Parkering</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Parkering</button>
         </div>
 
         <div class="row align-items align-self-start-center h-100">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">FAQ</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">FAQ</button>
 
             <!--This div contains info on how to find the person-->
             <div class="col-8 offset-1 findsomethingbox novifont">
