--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigt.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigt.cshtml
@@ -32,7 +32,7 @@
             <div class="col-1 align-self-center center">
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton"/>
             </div>
-            <div class="col-8 mb-2 search_box align-self-center mt-2">
+            <div class="col-8 mb-2 align-self-center mt-2">
                 <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont">
             </div>
         </div>
@@ -42,57 +42,57 @@
         </div>
 
         <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href='/faq'">Oversigtskort</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href='/faq'">Oversigtskort</button>
             
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 1</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 2</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 3</p>
             </button>
         </div>
 
         <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href='/privacy'">Parkering</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href='/privacy'">Parkering</button>
 
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 4</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 5</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 6</p>
             </button>
 
         </div>
 
         <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href='/faq'">Ofte Stillede Spørgsmål</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href='/faq'">Ofte Stillede Spørgsmål</button>
 
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 7</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 8</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 9</p>
             </button>
 
         </div>
 
         <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 offset-3 companybox">
+            <button type="button" class="col-2 mb-5 offset-3 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 10</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 11</p>
             </button>
-            <button type="button" class="col-2 mb-5 offset-1 companybox">
+            <button type="button" class="col-2 mb-5 offset-1 companybox novidgrey">
                 <p class="my-auto text-center novifont">Firma 12</p>
             </button>
 
