--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Parkering.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Parkering.cshtml
@@ -34,7 +34,7 @@
             <div class="col-1 align-self-center center">
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton" />
             </div>
-            <div class="col-8 mb-2 search_box align-self-center mt-2">
+            <div class="col-8 mb-2 align-self-center mt-2">
                 <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont">
             </div>
         </div>
@@ -46,7 +46,7 @@
 
         <!-- This div contains the buttons on left hand side-->
         <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">Oversigtskort</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Oversigtskort</button>
             <div class="col-9 offset-1">
                 <div class="col1">
                     <p class="parkingfont novifont">Hvis du ønsker at parkere hos Novi 8, så indtast venligst din nummerplade, for at begynde:</p>
@@ -55,21 +55,21 @@
         </div>
 
         <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">Parkering</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Parkering</button>
             <div class="col-9 offset-1">
                 <div class="col2">
                     <div class="col-8 mb-2 align-self-center">
-                        <input type="text" placeholder="XN XX XXX" class="parkinginput">
+                        <input type="text" placeholder="XN XX XXX" class="parkinginput novidgrey">
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">Ofte stillede spørgsmål</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Ofte stillede spørgsmål</button>
             <div class="col-9 offset-1">
                 <div class="col3">
-                    <button type="button" class="col-4 mb-5 offset-4 text-center parkingbutton novifont" onclick="window.location.href = '/privacy'">Registrer</button>
+                    <button type="button" class="col-4 mb-5 offset-4 text-center parkingbutton novifont noviyellow" onclick="window.location.href = '/privacy'">Registrer</button>
                 </div>
             </div>
         </div>
