--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/faq.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/faq.cshtml
@@ -26,7 +26,7 @@
             <div class="col-1 align-self-center center">
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton" />
             </div>
-            <div class="col-8 mb-2 search_box align-self-center mt-2">
+            <div class="col-8 mb-2 align-self-center mt-2">
                 <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont">
             </div>
         </div>
@@ -38,7 +38,7 @@
 
         <!-- This div contains the buttons on left hand side-->
         <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">Oversigtskort</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Oversigtskort</button>
             <div class="col-9 offset-1">
                 <div class="col1">
                     <p class="faqquestions novifont">Hvad er telefonnummeret til Falck?</p>
@@ -47,14 +47,14 @@
         </div>
 
         <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">Parkering</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Parkering</button>
             <div class="col-9 offset-1">
                 <div class="col2"></div>
             </div>
         </div>
 
         <div class="row">
-            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">Ofte stillede spørgsmål</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont noviyellow" onclick="window.location.href = '/privacy'">Ofte stillede spørgsmål</button>
             <div class="col-9 offset-1">
                 <div class="col3 novifont">
                   
