--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Index.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Index.cshtml
@@ -12,36 +12,36 @@
 </head>
 
 <body>
-    <div class="container logo3" >
-        <div class="row float-left">
-            <div class="col novi" style="">
+    <div class="container">
+        <div class="row">
+            <div class="float-left col novi logo3">
                 <img src="\Pictures/novi.png" />
             </div>
         </div>
 
-    <div class="indextext">
-        <div class="row">
-            <div class="col">
-                <p class="headline novifont" style=" text-align: center">
+        <div class="row top-buffer">
+            <div class="col indextext headline novifont text-center">
+                <p>
                     Velkommen til Novi 8
                 </p>
             </div>
         </div>
 
         <div class="row">
-            <div class="col">
-                <p class="headline novifont" style="text-align: center">
+            <div class="col headline novifont text-center">
+                <p>
                     Mangler du hjælp til noget?
                 </p>
             </div>
         </div>
 
-        <div class=" align-items-center">
-            <button type="button" class="col-4 offset-4 startbutton novifont noviyellow"
-                    onclick="window.location.href='/personinfo'">
-                Tryk her
-            </button>
+        <div class="row">
+            <div class="col-4 offset-4">
+                <button type="button" class="startbutton novifont noviyellow"
+                        onclick="window.location.href = '/personinfo'">
+                    Tryk her
+                </button>
+            </div>
         </div>
     </div>
-        </div>
 </body>
