css bootstrap overhaul

--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Index.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Index.cshtml
@@ -12,36 +12,32 @@
 </head>
 
 <body>
-    <div class="container">
+
+    <div class="container-fluid">
         <div class="row">
-            <div class="float-left col novi logo3">
+            <div class="col float-left logo3">
                 <img src="\Pictures/novi.png" />
             </div>
         </div>
 
-        <div class="row top-buffer">
-            <div class="col indextext headline novifont text-center">
-                <p>
-                    Velkommen til Novi 8
-                </p>
+        <div class="row">
+            <div class="col mx-auto">
+                <p class="headline novifont text-center">
+                    Velkommen til Novi </p>
+                <p class=" headline novifont text-center">
+                    Mangler du hjælp til noget? </p>
             </div>
         </div>
 
         <div class="row">
-            <div class="col headline novifont text-center">
-                <p>
-                    Mangler du hjælp til noget?
-                </p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-4 offset-4">
-                <button type="button" class="startbutton novifont noviyellow"
+            <div class="col-12 mt-5 text-center">
+                <button type="button" class="btn btn-primary btn-lg novifont noviyellow startbutton text-center"
                         onclick="window.location.href = '/personinfo'">
                     Tryk her
-                </button>
+                    </button>
             </div>
+
         </div>
     </div>
+
 </body>
