--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Personinfo.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Personinfo.cshtml
@@ -3,17 +3,17 @@
 @{
     ViewData["Title"] = "Person information";
 }
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="\css/core.css" />
-        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="\css/core.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
-        <title>@ViewData["title"]</title>
+    <title>@ViewData["title"]</title>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    </head>
+</head>
 
 <body>
     <!-- This div contains the site-->
@@ -83,4 +83,74 @@
     </div>
 </body>
 
+<!--
 
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-10">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-2">
+
+                    <button type="button" class="btn btn-success">
+                        Button
+                    </button>
+                    <button type="button" class="btn btn-success">
+                        Button
+                    </button>
+                    <button type="button" class="btn btn-success">
+                        Button
+                    </button>
+                </div>
+                <div class="col-md-8">
+                    <ul>
+                        <li class="list-item">
+                            Lorem ipsum dolor sit amet
+                        </li>
+                        <li class="list-item">
+                            Consectetur adipiscing elit
+                        </li>
+                        <li class="list-item">
+                            Integer molestie lorem at massa
+                        </li>
+                        <li class="list-item">
+                            Facilisis in pretium nisl aliquet
+                        </li>
+                        <li class="list-item">
+                            Nulla volutpat aliquam velit
+                        </li>
+                        <li class="list-item">
+                            Faucibus porta lacus fringilla vel
+                        </li>
+                        <li class="list-item">
+                            Aenean sit amet erat nunc
+                        </li>
+                        <li class="list-item">
+                            Eget porttitor lorem
+                        </li>
+                    </ul>
+                    <p>
+                        Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+                    </p>
+                </div>
+                <div class="col-md-2">
+                    <img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+-->
