--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
@@ -176,7 +176,6 @@ button:hover {
 .novi {
     height: 10%;
     width: 10%;
-    padding: 4%;
 }
 
 .noviperson {
@@ -185,16 +184,9 @@ button:hover {
 }
 
 .startbutton {
-    display: block;
-    border-radius: 25%;
-    box-shadow: 7px 7px 5px grey;
-    font-size: 300%;
-    padding: 5vh;
-    height: 100%;
-    align-content: center;
     border-style: none;
-    
-
+    padding: 2vh 4vh 2vh 2vh;
+    display: inline-block;
 }
 
 .findsomethingbox {
@@ -230,17 +222,13 @@ button:hover {
     margin-top: 5%;
 }
 
-.logo3 {
-    margin-top: 5%;
-    margin-left: -3%;
-    position: fixed;
-}
-
 .map {
     margin-top: 15%;
     margin-left: 38%;
 }
 
-.top-buffer {
-    margin-top: 2vh;
+.logo3 {
+    margin-top: 8vh;
+    margin-bottom: 10vh;
+
 }
